# client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
landing/: index.html  install.sh  version.json
landing/.github/workflows/: deploy.yml
scripts/: build-dmg.sh  gen-icon.py
src/: api.rs  main.rs  mesh.rs  profiles.rs  route.rs  tun.rs  ui.rs  vpn.rs  wg.rs
