[package]
name = "vpn-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vpn-client"
path = "src/main.rs"

[dependencies]
boringtun = "0.7"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
