[package]
name = "nexguard"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "nexguard"
path = "src/main.rs"

[dependencies]
boringtun = "0.7"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = "0.31"
egui = "0.31"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
wintun = "0.5"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
